# GAMES_101_Assignment

./: Introduction to Computer Graphics.md  README.md
Assignment1/ass1/: CMakeLists.txt  main.cpp  rasterizer.cpp
notes/: Assignment1.md
